--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="roundResults"></div>
         
           <div>
-            <button id="reset">Play Again!</button>
+            <button id="resetBtn">Play Again!</button>
           </div>
            
           </div>
