--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <!-- <script src="app.js"></script> -->
     <script>
         const optionBtn = document.querySelectorAll('div.optionBtn button');
+        let playerChoice = '';
         
         resetBtn.addEventListener('click',() => location.reload());
 
