--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <!-- <script src="app.js"></script> -->
     <script>
         const optionBtn = document.querySelectorAll('div.optionBtn button');
-        const playerPoints = document.querySelector('playerScore')
-        const cpuPoints = document.querySelector('computerScore')
+        const playerPoints = document.querySelector('#playerScore')
+        const cpuPoints = document.querySelector('#computerScore')
         let playerChoice = '';
         let playerScore=0;
         let cpuScore=0;
