--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
         }
 
         function playRound(userChoice,cpuChoice){
-          if (userChoice=='Piedra' && cpuChoice=='Tijera'){
+          if (userChoice==='Piedra' && cpuChoice==='Tijera'){
             playerScore++;
-          }else if(userChoice=='Papel' && cpuChoice=='Piedra'){
+          }else if(userChoice==='Papel' && cpuChoice==='Piedra'){
             playerScore++;
-          }else if(userChoice=='Tijera' && cpuChoice=='Papel'){
+          }else if(userChoice==='Tijera' && cpuChoice==='Papel'){
             playerScore++;
           } 
-          else if (cpuChoice=='Piedra' && userChoice=='Tijera'){
+          else if (cpuChoice==='Piedra' && userChoice==='Tijera'){
             cpuScore++;
-          }else if(cpuChoice=='Papel' && userChoice=='Piedra'){
+          }else if(cpuChoice==='Papel' && userChoice==='Piedra'){
             cpuScore++;
-          }else if(cpuChoice=='Tijera' && userChoice=='Papel'){
+          }else if(cpuChoice==='Tijera' && userChoice==='Papel'){
             cpuScore++;
           }
           
